perf: optimize application for heavy throughput
BREAKING CHANGE: moves existing routes to avoid regex redirect in ingress
